--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ant-design-pro",
+  "name": "react-umi-demo",
   "version": "5.0.0",
   "private": true,
   "description": "An out-of-box UI solution for enterprise applications",
@@ -53,6 +53,9 @@
     "@ant-design/pro-form": "^1.43.0",
     "@ant-design/pro-layout": "^6.26.0",
     "@ant-design/pro-table": "^2.56.0",
+    "@formily/antd": "^2.0.2",
+    "@formily/core": "^2.0.2",
+    "@formily/react": "^2.0.2",
     "@umijs/route-utils": "^2.0.3",
     "antd": "4.16.13",
     "classnames": "^2.2.6",
