--- a/package.json
+++ b/package.json
@@ -87,8 +87,9 @@
     "@umijs/plugin-openapi": "^1.2.0",
     "@umijs/preset-ant-design-pro": "^1.2.0",
     "@umijs/preset-dumi": "^1.1.7",
-    "@umijs/preset-react": "^1.8.17",
+    "@umijs/preset-react": "^1.8.30",
     "@umijs/yorkie": "^2.0.3",
+    "babel-plugin-import": "^1.13.3",
     "carlo": "^0.9.46",
     "cross-env": "^7.0.0",
     "cross-port-killer": "^1.1.1",
@@ -108,7 +109,7 @@
     "typescript": "^4.2.2"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=10.13.0"
   },
   "gitHooks": {
     "commit-msg": "fabric verify-commit"
